# mcp-server-demo

./: Cargo.toml  Dockerfile  README.md  TODO.md
src/: main.rs  utility_tools.rs
