[package]
name = "mcp-server-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.8.1", features = [
    "server",
    "macros",
    "client",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
bcrypt = "0.15"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
aes-gcm = "0.10"
hex = "0.4"
url = "2.5"
regex = "1.10"
jsonwebtoken = "9.3"
hmac = "0.12"
subtle = "2.6"
urlencoding = "2.1"
